semigroup_derive/tests/snapshots/construction_annotated.snap
---
source: semigroup_derive/src/op.rs
assertion_line: 70
expression: formatted
---
#[automatically_derived]
impl<T> From<Option<T>> for Coalesce<T> {
    fn from(value: Option<T>) -> Self {
        Coalesce(value)
    }
}
#[automatically_derived]
impl<T> std::ops::Deref for Coalesce<T> {
    type Target = Option<T>;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
#[automatically_derived]
impl<T> std::ops::DerefMut for Coalesce<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
#[automatically_derived]
impl<T> ::semigroup::Construction<Option<T>> for Coalesce<T> {
    fn into_inner(self) -> Option<T> {
        self.0
    }
}
#[automatically_derived]
impl<T> ::semigroup::Op<Option<T>> for Coalesce<T> {
    fn lift_op_assign(base: &mut Option<T>, other: Option<T>) {
        let (mut base_unit, other_unit) = ((), ());
        let (b, o) = (
            ::semigroup::Annotated::new(base, &mut base_unit),
            ::semigroup::Annotated::new(other, other_unit),
        );
        <Self as ::semigroup::AnnotatedOp<_, _>>::lift_annotated_op_assign(b, o);
    }
}
#[automatically_derived]
impl<T> ::semigroup::Semigroup for Coalesce<T> {
    fn op_assign(&mut self, other: Self) {
        <Self as ::semigroup::Op<_>>::lift_op_assign(&mut self.0, other.0);
    }
}
#[automatically_derived]
impl<T, A> ::semigroup::AnnotatedSemigroup<A> for Coalesce<T> {
    fn annotated_op_assign(
        base: ::semigroup::Annotated<&mut Self, &mut A>,
        other: ::semigroup::Annotated<Self, A>,
    ) {
        <Self as ::semigroup::AnnotatedOp<
            _,
            A,
        >>::lift_annotated_op_assign(base.map(|v| &mut v.0), other.map(|v| v.0));
    }
}
#[automatically_derived]
impl<T, A> ::semigroup::Annotate<A> for Coalesce<T> {
    type Annotation = A;
    fn annotated(self, annotation: Self::Annotation) -> ::semigroup::Annotated<Self, A> {
        ::semigroup::Annotated::new(self, annotation)
    }
}
