semigroup_derive/tests/snapshots/construction_custom_annotation.snap
---
source: semigroup_derive/src/op.rs
assertion_line: 70
expression: formatted
---
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> From<T> for Concat<T> {
    fn from(value: T) -> Self {
        Concat(value)
    }
}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> std::ops::Deref for Concat<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> std::ops::DerefMut for Concat<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> ::semigroup::Construction<T>
for Concat<T> {
    fn into_inner(self) -> T {
        self.0
    }
}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> ::semigroup::Op<T> for Concat<T> {
    fn lift_op_assign(base: &mut T, other: T) {
        let (mut base_unit, other_unit) = (vec![(); 0], vec![(); 0]);
        let (b, o) = (
            ::semigroup::Annotated::new(base, &mut base_unit),
            ::semigroup::Annotated::new(other, other_unit),
        );
        <Self as ::semigroup::AnnotatedOp<_, _>>::lift_annotated_op_assign(b, o);
    }
}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> ::semigroup::MonoidOp<T> for Concat<T>
where
    Self: ::semigroup::Monoid,
{}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> ::semigroup::Semigroup for Concat<T> {
    fn op_assign(base: &mut Self, other: Self) {
        <Self as ::semigroup::Op<_>>::lift_op_assign(&mut base.0, other.0);
    }
}
#[automatically_derived]
impl<
    T: IntoIterator + FromIterator<T::Item>,
    X: IntoIterator + FromIterator<X::Item>,
> ::semigroup::AnnotatedSemigroup<X> for Concat<T>
where
    X::Item: Clone,
{
    fn annotated_op_assign(
        base: ::semigroup::Annotated<&mut Self, &mut X>,
        other: ::semigroup::Annotated<Self, X>,
    ) {
        <Self as ::semigroup::AnnotatedOp<
            _,
            X,
        >>::lift_annotated_op_assign(base.map(|v| &mut v.0), other.map(|v| v.0));
    }
}
#[automatically_derived]
impl<
    T: IntoIterator + FromIterator<T::Item>,
    X: IntoIterator + FromIterator<X::Item>,
> ::semigroup::Annotate<X> for Concat<T>
where
    X::Item: Clone,
{
    type Annotation = X;
    fn annotated(self, annotation: Self::Annotation) -> ::semigroup::Annotated<Self, X> {
        ::semigroup::Annotated::new(self, annotation)
    }
}
#[automatically_derived]
impl<T: IntoIterator + FromIterator<T::Item>> ::semigroup::Monoid for Concat<T>
where
    Self: Default,
{
    fn identity() -> Self {
        Default::default()
    }
}
