semigroup_derive/tests/snapshots/construction_not_annotated.snap
---
source: semigroup_derive/src/construction.rs
assertion_line: 70
expression: formatted
---
#[automatically_derived]
impl<T: std::ops::Add> From<T> for Sum<T> {
    fn from(value: T) -> Self {
        Sum(value)
    }
}
#[automatically_derived]
impl<T: std::ops::Add> std::ops::Deref for Sum<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
#[automatically_derived]
impl<T: std::ops::Add> std::ops::DerefMut for Sum<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
#[automatically_derived]
impl<T: std::ops::Add> crate::Construction<T> for Sum<T> {
    fn into_inner(self) -> T {
        self.0
    }
}
#[automatically_derived]
#[cfg(feature = "monoid")]
impl<T: std::ops::Add> crate::MonoidOp<T> for Sum<T>
where
    Self: crate::Monoid,
{}
#[automatically_derived]
impl<T: std::ops::Add> crate::Semigroup for Sum<T> {
    fn op_assign(&mut self, other: Self) {
        <Self as crate::Op<_>>::lift_op_assign(&mut self.0, other.0);
    }
    fn op(base: Self, other: Self) -> Self {
        Self::from(<Self as crate::Op<_>>::lift_op(base.0, other.0))
    }
}
#[automatically_derived]
#[cfg(feature = "monoid")]
impl<T: std::ops::Add> crate::Monoid for Sum<T> {
    fn identity() -> Self {
        Default::default()
    }
}
#[automatically_derived]
impl<T: std::ops::Add> crate::Commutative for Sum<T> {}
