semigroup_derive/tests/snapshots/op_not_annotated.snap
---
source: semigroup_derive/src/op.rs
assertion_line: 55
expression: formatted
---
#[automatically_derived]
impl<T: std::ops::Add> From<T> for Sum<T> {
    fn from(value: T) -> Self {
        Sum(value)
    }
}
#[automatically_derived]
impl<T: std::ops::Add> std::ops::Deref for Sum<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
#[automatically_derived]
impl<T: std::ops::Add> std::ops::DerefMut for Sum<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
#[automatically_derived]
impl<T: std::ops::Add> crate::Construction<T> for Sum<T> {
    fn into_inner(self) -> T {
        self.0
    }
}
#[automatically_derived]
#[cfg(feature = "monoid")]
impl<T: std::ops::Add> crate::MonoidOp<T> for Sum<T>
where
    Self: crate::Monoid,
{}
#[automatically_derived]
impl<T: std::ops::Add> crate::Semigroup for Sum<T> {
    fn op_assign(base: &mut Self, other: Self) {
        <Self as crate::SemigroupOp<_>>::lift_op_assign(&mut base.0, other.0);
    }
}
#[automatically_derived]
#[cfg(feature = "monoid")]
impl<T: std::ops::Add> crate::Monoid for Sum<T> {
    fn identity() -> Self {
        Default::default()
    }
}
#[automatically_derived]
impl<T: std::ops::Add> crate::Commutative for Sum<T> {}
