semigroup_derive/tests/snapshots/semigroup_annotated.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 101
expression: formatted
---
#[automatically_derived]
impl ::semigroup::Semigroup for NamedStruct {
    fn op_assign(base: &mut Self, other: Self) {
        use ::semigroup::Op;
        semigroup::op::Overwrite::lift_op_assign(&mut base.foo, other.foo);
        semigroup::op::Coalesce::lift_op_assign(&mut base.bar, other.bar);
    }
}
#[derive(Debug, Clone, PartialEq)]
pub struct NamedStructAnnotated<A> {
    pub foo: ::semigroup::Annotated<String, A>,
    pub bar: ::semigroup::Annotated<Option<u32>, A>,
}
#[automatically_derived]
impl<A: Clone> ::semigroup::Semigroup for NamedStructAnnotated<A> {
    fn op_assign(base: &mut Self, other: Self) {
        use ::semigroup::IdempotentOp;
        use ::semigroup::Op;
        let __selected_foo = semigroup::op::Overwrite::lift_select(
            base.foo.value(),
            other.foo.value(),
        );
        let (__other_foo_val, __other_foo_ann) = other.foo.into_parts();
        semigroup::op::Overwrite::lift_op_assign(base.foo.value_mut(), __other_foo_val);
        if let ::semigroup::Selected::Other = __selected_foo {
            *base.foo.annotation_mut() = __other_foo_ann;
        }
        let __selected_bar = semigroup::op::Coalesce::lift_select(
            base.bar.value(),
            other.bar.value(),
        );
        let (__other_bar_val, __other_bar_ann) = other.bar.into_parts();
        semigroup::op::Coalesce::lift_op_assign(base.bar.value_mut(), __other_bar_val);
        if let ::semigroup::Selected::Other = __selected_bar {
            *base.bar.annotation_mut() = __other_bar_ann;
        }
    }
}
impl NamedStruct {
    pub fn annotated<A: Clone>(self, annotation: A) -> NamedStructAnnotated<A> {
        NamedStructAnnotated {
            foo: ::semigroup::Annotated::new(self.foo, annotation.clone()),
            bar: ::semigroup::Annotated::new(self.bar, annotation),
        }
    }
}
