semigroup_derive/tests/snapshots/semigroup_custom_annotation.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 100
expression: formatted
---
#[automatically_derived]
impl ::semigroup::Semigroup for NamedStruct {
    fn op_assign(base: &mut Self, other: Self) {
        use ::semigroup::Op;
        semigroup::op::Last::lift_op_assign(&mut base.foo, other.foo);
        semigroup::op::Last::lift_op_assign(&mut base.bar, other.bar);
        semigroup::op::Last::lift_op_assign(&mut base.baz, other.baz);
    }
}
#[derive(Debug, Clone, Copy, PartialEq, Eq, PartialOrd, Ord, Default, Hash)]
pub struct NamedStructAnnotation<X> {
    foo: X,
    bar: X,
    baz: X,
}
#[automatically_derived]
impl<X: Clone> ::semigroup::AnnotatedSemigroup<NamedStructAnnotation<X>>
for NamedStruct {
    fn annotated_op_assign(
        mut base: ::semigroup::Annotated<&mut Self, &mut NamedStructAnnotation<X>>,
        other: ::semigroup::Annotated<Self, NamedStructAnnotation<X>>,
    ) {
        use ::semigroup::AnnotatedOp;
        let (base_value, base_annotation) = base.into_parts();
        let (other_value, other_annotation) = other.into_parts();
        semigroup::op::Last::lift_annotated_op_assign(
            ::semigroup::Annotated::new(&mut base_value.foo, &mut base_annotation.foo),
            ::semigroup::Annotated::new(other_value.foo, other_annotation.foo),
        );
        semigroup::op::Last::lift_annotated_op_assign(
            ::semigroup::Annotated::new(&mut base_value.bar, &mut base_annotation.bar),
            ::semigroup::Annotated::new(other_value.bar, other_annotation.bar),
        );
        semigroup::op::Last::lift_annotated_op_assign(
            ::semigroup::Annotated::new(&mut base_value.baz, &mut base_annotation.baz),
            ::semigroup::Annotated::new(other_value.baz, other_annotation.baz),
        );
    }
}
#[automatically_derived]
impl<X: Clone> ::semigroup::Annotate<NamedStructAnnotation<X>> for NamedStruct {
    type Annotation = X;
    fn annotated(
        self,
        annotation: Self::Annotation,
    ) -> ::semigroup::Annotated<Self, NamedStructAnnotation<X>> {
        ::semigroup::Annotated::new(
            self,
            NamedStructAnnotation {
                foo: annotation.clone(),
                bar: annotation.clone(),
                baz: annotation.clone(),
            },
        )
    }
}
