semigroup_derive/tests/snapshots/semigroup_generics.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 100
expression: formatted
---
#[automatically_derived]
impl<T, U> crate::Semigroup for UnnamedStruct<T, U>
where
    T: crate::Semigroup,
    Vec<U>: crate::Semigroup,
{
    fn op_assign(&mut self, other: Self) {
        self.0.op_assign(other.0);
        self.1.op_assign(other.1);
    }
}
