semigroup_derive/tests/snapshots/semigroup_monoid.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 100
expression: formatted
---
#[automatically_derived]
impl ::semigroup::Semigroup for MonoidStruct {
    fn op_assign(base: &mut Self, other: Self) {
        <semigroup::op::Sum<
            _,
        > as ::semigroup::Op<_>>::lift_op_assign(&mut base.sum, other.sum);
    }
}
#[automatically_derived]
impl ::semigroup::Monoid for MonoidStruct {
    fn identity() -> Self {
        Self {
            sum: <semigroup::op::Sum<_> as ::semigroup::MonoidOp<_>>::lift_identity(),
        }
    }
}
#[automatically_derived]
impl ::semigroup::Commutative for MonoidStruct {}
