semigroup_derive/tests/snapshots/semigroup_not_annotated.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 100
expression: formatted
---
#[automatically_derived]
impl<T: std::ops::Add> crate::Semigroup for UnnamedStruct<T> {
    fn op_assign(base: &mut Self, other: Self) {
        use crate::Op;
        semigroup::op::Added::lift_op_assign(&mut base.0, other.0);
        semigroup::op::Overwrite::lift_op_assign(&mut base.1, other.1);
    }
}
